<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addOrCreateCalls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".AddPhoneCallsActivity"
    android:background="@drawable/gradient_2">

    <TextView
        android:id="@+id/addOrCreateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_or_create_phonebill"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/customerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customername"
        android:textColor="#151414"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOrCreateTextView"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/customerNameEdit"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHighlight="#0B0A0A"
        android:textColorLink="#1E1D1D"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toEndOf="@+id/customerNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/addOrCreateTextView"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/callerNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/caller_number"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/callerNumberEditText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerNameTextView"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/callerNumberEditText"
        android:layout_width="241dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="nnn-nnn-nnnn"
        android:ems="10"
        android:hint="nnn-nnn-nnnn"
        android:textColorHighlight="#0E0E0E"
        android:textColorLink="#2B2929"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerNameEdit"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/calleeNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/callee_number"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calleeNumberEditText"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callerNumberTextView"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/calleeNumberEditText"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nnn_nnn_nnnn"
        android:inputType="text"
        android:textColorHighlight="#322F2F"
        android:textColorLink="#323030"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callerNumberEditText"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/startTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_time"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startEditText"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calleeNumberTextView"
        app:layout_constraintVertical_bias="0.108" />

    <EditText
        android:id="@+id/startEditText"
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/mm_dd_yyyy_hh_mm_am_pm"
        android:inputType="textPersonName"
        android:textColorHighlight="#2E2D2D"
        android:textColorLink="#292727"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calleeNumberEditText"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/endTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/end_date_time"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endEditText"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTextView"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/endEditText"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/mm_dd_yyyy_hh_mm_am_pm"
        android:inputType="text"
        android:textColorHighlight="#272525"
        android:textColorLink="#353232"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startEditText"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/addOrCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_create"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endEditText"
        app:layout_constraintVertical_bias="0.373" />
</androidx.constraintlayout.widget.ConstraintLayout>